Test chart functionality